# traid

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: build-deb.yml
api/: backup_routes.py  docker_routes.py  main.py  models.py  sharing_routes.py  uds_client.py  vm_routes.py  websocket_manager.py
debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules
debian/apt-preferences/: traid
lighttpd/: traid.conf
shared/: protocol.py
static/: index.html
systemd/: hybrid-web.service  traid-web.service  traid-worker.service
tests/: test_api_routes.py  test_backup_scheduler.py  test_command_validator.py  test_disk_ops_unit.py  test_docker_ops.py  test_mdstat_reader.py  test_models.py  test_sharing_ops.py  test_traid_algorithm.py  test_uds_protocol.py  test_vm_ops.py
tests/fixtures/: lsblk_output.json  mdstat_clean.txt  mdstat_syncing.txt
worker/: backup_scheduler.py  command_validator.py  daemon.py  disk_ops.py  docker_ops.py  fs_ops.py  mdstat_reader.py  sharing_ops.py  traid_algorithm.py  vm_ops.py
