[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traid"
version = "0.1.0"
description = "TSEW RAID Web Appliance Manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.13.0",
    "python-json-logger==4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "worker*", "shared*"]
